--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "htl",
   "license": "ISC",
   "dependencies": {
+    "debug": "^4.3.1",
     "vuepress": "^1.8.0"
   },
   "devDependencies": {
