--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "debug": "^4.3.1",
+    "express": "^4.17.1",
     "vuepress": "^1.8.0"
   },
   "devDependencies": {
